# assert_layout

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  parse.rs
src/analyse/: mod.rs
tests/: const-generic.rs  generic.rs  multi-generic.rs  namespaced-with-default.rs  namespaced.rs  nested-trait-generic.rs  simple.rs  trait-generic.rs
